--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -83,6 +83,11 @@ a:hover {
   font-family: 'Noto Sans', 'Noto Sans KR', sans-serif !important;
   }
 
+.archive__item-teaser {
+  font-family: 'Noto Sans', 'Noto Sans KR', sans-serif !important;
+  color: #666 !important;
+}
+
 /* 날짜/메타 정보 */
 .archive__item-date,
 .page__meta,
